--- a/package.json
+++ b/package.json
@@ -183,8 +183,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "nodemon":"start index.js"
+    "start": "node server.js",
+    "nodemon":"start server.js"
   },
   "repository": {
     "type": "git",
