--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "array-flatten": "^1.1.1",
     "balanced-match": "^1.0.2",
     "base64-js": "^1.5.1",
+    "bcrypt": "^5.0.1",
     "binary-extensions": "^2.2.0",
     "body-parser": "^1.19.0",
     "boxen": "^5.1.2",
