--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "escape-goat": "^2.1.1",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.1.2",
     "forwarded": "^0.2.0",
@@ -93,6 +94,7 @@
     "is-typedarray": "^1.0.0",
     "is-yarn-global": "^0.3.0",
     "json-buffer": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "kareem": "^2.3.2",
     "keyv": "^3.1.0",
     "latest-version": "^5.1.0",
@@ -111,12 +113,11 @@
     "minimist": "^1.2.5",
     "mongodb": "^4.1.1",
     "mongodb-connection-string-url": "^2.1.0",
-    "mongoose": "^6.0.12",
+    "mongoose": "^6.1.3",
     "mpath": "^0.8.4",
     "mquery": "^4.0.0",
     "ms": "^2.0.0",
     "negotiator": "^0.6.2",
-    "nodemon": "^2.0.14",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "normalize-url": "^4.5.1",
@@ -186,7 +187,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "nodemon": "start server.js"
+    "dev": "nodemon  server.js"
   },
   "repository": {
     "type": "git",
@@ -198,5 +199,8 @@
   "bugs": {
     "url": "https://github.com/mahrokh-sadro/Shopcart-RESTful-API/issues"
   },
-  "homepage": "https://github.com/mahrokh-sadro/Shopcart-RESTful-API#readme"
+  "homepage": "https://github.com/mahrokh-sadro/Shopcart-RESTful-API#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
