--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "content-disposition": "^0.5.3",
     "content-type": "^1.0.4",
     "cookie": "^0.4.0",
+    "cookie-parser": "^1.4.6",
     "cookie-signature": "^1.0.6",
     "cors": "^2.8.5",
     "crypto-random-string": "^2.0.0",
@@ -58,6 +59,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.17.2",
+    "express-jwt": "^6.1.0",
     "express-validator": "^6.14.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.1.2",
@@ -114,6 +116,7 @@
     "mongodb": "^4.1.1",
     "mongodb-connection-string-url": "^2.1.0",
     "mongoose": "^6.1.3",
+    "morgan": "^1.10.0",
     "mpath": "^0.8.4",
     "mquery": "^4.0.0",
     "ms": "^2.0.0",
